--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
+spring.freemarker.template-loader-path=classpath:/templates
