Spring Boot Mail: рассылка почты пользователям, активация аккаунта

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates
 
 upload.path=/home/s/projects/sweater/upload
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=sergeykolesnikov41@gmail.com
+spring.mail.password=mnex16po
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
