--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.mail.password=mnex16po
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+recaptcha.secret=6LfmVCcdAAAAAPj2whCeNEgIIqL90wbO8sjVxh2q
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
